@@ -18,3 +18,20 @@ Synchronizing everything is achieved by calling: :code:`path/to/php path/to/bin/
 
 Finally a single configuration can be synchronized by calling:
 :code:`path/to/php path/to/bin/typo3 externalimport:sync --table=foo --index=bar`.
+
+
+.. _user-command-debug:
+
+Debugging on the command-line
+"""""""""""""""""""""""""""""
+
+Debugging on the command-line is achieved by using the verbose flag, which is
+available for all commands. If global debugging is turned on
+(see the :ref:`Extension configuration <configuration>`), debugged variables
+will be dumped after the usual output from the External Import command.
+If global debugging is disabled, it can be enabled for a single run, by
+using the "debug" flag:
+
+.. code-block:: text
+
+	path/to/php path/to/bin/typo3 externalimport:sync --table=foo --index=bar --debug -v
