@@ -1,3 +1,7 @@
+2018-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added debugging on the command-line, resolves #59
+
 2018-05-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added context to Importer calls and log entries, resolves #27
